home page theme etc finalized and about section added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,18 @@ body {
   }
 }
 
-.hover-text-5xl:hover>.bg-gradient-text {
-  font-size: 5rem;
+@keyframes bounce {
+
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+.bounce {
+  animation: bounce 1s;
 }
